--- a/CowboyBebop/style.css
+++ b/CowboyBebop/style.css
@@ -6,6 +6,7 @@ body {
     background-color: #00030e;
     overflow: hidden;
     align-items: center;
+    justify-content: center;
 }
 
 .container {
@@ -13,7 +14,7 @@ body {
     transform-style: preserve-3d;
     position: relative;
     display: flex;
-    width: 100%;
+    width: 30%;
     height: 95%;
     align-items: flex-end;
     justify-content: center;
@@ -21,7 +22,7 @@ body {
 }
 
 .background {
-    width: 30%;
+    width: 100%;
     height: 100%;
     z-index: 1;
     filter: brightness(.75) hue-rotate(40deg);
@@ -36,7 +37,7 @@ body {
 }
 
 .title {
-   max-width: 10%;
+   max-width: 30%;
    top: 30%;
 }
 
@@ -49,7 +50,7 @@ body {
 .stars {
     position: absolute;
     top: 0;
-    width: 15%;
+    width: 50%;
     height: 100%; 
     z-index: 2;
     overflow: hidden;
